--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <div>
-	<a src="https://youtu.be/YXgXw25E5RU">My current favourite song is Unstoppable</a>
+	<a href="https://youtu.be/YXgXw25E5RU">My current favourite song is Unstoppable</a>
 </div>
 </body>
 
